# fish_vars

./: Cargo.toml  README.md
src/: main.rs
