[package]
name = "fish_vars"
version = "0.1.3"
authors = ["Josh Horwitz <joshua.d.horwitz@gmail.com>"]
description = "Command line program to quickly add a path variable to your Fish Shell config file"
readme = "README.md"
license = "MIT"

[[bin]]
bench = false
path = "src/main.rs"
name = "fv"

[dependencies]

